5 December 2007: Wouter
	- locking in context_new() inside the function.

4 December 2007: Wouter
	- minor Makefile fixup.
	- moved module-stack code out of daemon/daemon into services/modstack,
	  preparing for code-reuse.
	- move context into own header file.
	- context query structure.
	- removed unused variable pwd from checkconf.
	- removed unused assignment from outside netw.
	- check timeval length of string.
	- fixup error in val_utils getsigner.
	- fixup same (*var) error in netblocktostr.
	- fixup memleak on parse error in localzone.
	- fixup memleak on packet parse error.
	- put ; after union in parser.y.
	- small hardening in iter_operate against iq==NULL.
	- hardening, if error reply with rcode=0 (noerror) send servfail.
	- fixup same (*var) error in find_rrset in msgparse, was harmless.
	- check return value of evtimer_add().
	- fixup lockorder in lruhash_reclaim(), building up a list of locked
	  entries one at a time. Instead they are removed and unlocked.
	- fptr_wlist for markdelfunc.
	- removed is_locked param from lruhash delkeyfunc.
	- moved bin_unlock during bin_split purely to please.

3 December 2007: Wouter
	- changed checkconf/ to smallapp/ to make room for more support tools.
	  (such as unbound-host).
	- install dirs created with -m 755 because they need to be accessible.
	- library extensive featurelist added to TODO.
	- please doxygen, lint.
	- library test application, with basic functionality.
	- fix for building in a subdirectory. 
	- link lib fix for Leopard.

30 November 2007: Wouter
	- makefile that creates libunbound.la, basic file or libunbound.a
	  when creating static executables (no libtool).
	- more API setup.

29 November 2007: Wouter
	- 0.9 public API start.

28 November 2007: Wouter
	- Changeup plan for 0.8 - no complication needed, a simple solution
	  has been chosen for authoritative features.
	- you can use single quotes in the config file, so it is possible
	  to specify TXT records in local data.